--- a/IText7Sample/IText7Sample/IText7Sample - Backup.csproj
+++ b/IText7Sample/IText7Sample/IText7Sample - Backup.csproj
@@ -8,5 +8,10 @@
   <ItemGroup>
     <PackageReference Include="itext7" Version="7.2.1" />
   </ItemGroup>
-
+<ItemGroup>
+    <ContentWithTargetPath Include="ConfigFiles\MyFirstConfigFile.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <TargetPath>%(Filename)%(Extension)</TargetPath>
+    </ContentWithTargetPath>
+</ItemGroup>
 </Project>
